--- a/src/content/about/founder.mdx
+++ b/src/content/about/founder.mdx
@@ -2,7 +2,7 @@
 name: "M. Abdi Nugroho"
 username: "Devtective"
 role: "Software Engineer & Founder of DevFlow"
-avatar: "/images/profile-abdi.jpg"
+avatar: "/images/pasfoto-abdi.jpeg"
 location: "Palembang, Indonesia"
 university: "UIN Raden Fatah Palembang"
 major: "Sistem Informasi"
